--- a/apps/tournament_activity/frontend/index.html
+++ b/apps/tournament_activity/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>スポーツ大会申込</title>
+    <title>十条クラブ　大会申込フォーム</title>
   </head>
   <body>
     <div id="root"></div>
